apps/argocd/base/resources/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway-argocd
  namespace: argocd
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - argocd.svc.home.arpa
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: argocd-tls
      hosts:
        - argocd.svc.home.arpa
