apps/argocd/base/resources/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-argocd
  namespace: argocd
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: https-argocd
  hostnames:
    - argocd.svc.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
