apps/argocd/base/resources/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: virtual-service-argocd
  namespace: argocd
spec:
  hosts:
    - argocd.svc.home.arpa
  gateways:
    - gateway-argocd
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
